--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '3.1'
+
 services:
+  app:
+    build: . 
+    depends_on:
+      - db
+    ports:
+      - 80:80
+    volumes:
+      - .:/api
   db:
     image: postgres
     restart: always
